# smart-esprit

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  reclamation-final.glade  reclamation-final.gladep
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Reclamation.c  Reclamation.h  callbacks.c  callbacks.h  interface.c  interface.h.bak  main.c  reclamation-final  reclamation.txt
src/.deps/: Reclamation.Po  callbacks.Po
